--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
 
 
     <TextView
+        android:id="@+id/txt_PageTitle"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_gravity="center"
