--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
 
     </TableLayout>
 
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/image"
         android:layout_width="360dp"
         android:layout_height="270dp"
@@ -174,5 +174,6 @@
                 android:textSize="8pt" />
         </TableRow>
     </TableLayout>
+
 
 </LinearLayout>
