--- a/app/src/main/res/layout/mainmenu.xml
+++ b/app/src/main/res/layout/mainmenu.xml
@@ -35,99 +35,25 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <Button
-        android:id="@+id/btn_UefaCL"
+        android:id="@+id/btn_selectCategory"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/francois_one"
-        android:text="Uefa CL Teams"
+        android:text="Select Category"
         android:textColor="#010101"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.072"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_F1" />
-
-    <Button
-        android:id="@+id/btn_Historical"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/francois_one"
-        android:text="Historical"
-        android:textColor="#010101"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.072"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_category" />
-
-    <Button
-        android:id="@+id/btn_Film"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/francois_one"
-        android:text="Film Posters"
-        android:textColor="#010101"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.927"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_category" />
-
-    <Button
-        android:id="@+id/btn_IconicAlbums"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="1dp"
-        android:fontFamily="@font/francois_one"
-        android:text="Iconic Albums"
-        android:textColor="#010101"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.932"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Film" />
-
-    <Button
-        android:id="@+id/btn_HipHop"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:fontFamily="@font/francois_one"
-        android:text="Hip-Hop Albums"
-        android:textColor="#010101"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.932"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_IconicAlbums" />
-
-    <Button
-        android:id="@+id/btn_F1"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="1dp"
-        android:fontFamily="@font/francois_one"
-        android:text="F1 Podiums"
-        android:textColor="#010101"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.072"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Historical" />
 
     <TextView
         android:id="@+id/txt_morecat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="80dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/francois_one"
         android:gravity="center"
@@ -135,8 +61,6 @@
         android:textColor="#010101"
         android:textSize="12pt"
         app:layout_constraintBottom_toTopOf="@+id/Logout"
-        app:layout_constraintTop_toBottomOf="@+id/btn_HipHop"
-        app:layout_constraintVertical_bias="0.87"
         tools:layout_editor_absoluteX="0dp" />
 
     <Button
