--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#07F5DC</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="testcolor">#CCFF0000</color>
+    <color name="transparency">#00000000</color>
+    <color name="Greytransparency">#1A000000</color>
+    <color name="Blacktransparency">#66000000</color>
+
 </resources>
