--- a/app/src/main/res/layout/mainmenu.xml
+++ b/app/src/main/res/layout/mainmenu.xml
@@ -49,26 +49,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_category" />
 
-    <TextView
-        android:id="@+id/txt_morecat"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/btn_howToPlay"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
         android:fontFamily="@font/francois_one"
-        android:gravity="center"
-        android:text="More Categories coming soon..."
+        android:text="How To Play"
         android:textColor="#010101"
-        android:textSize="12pt"
-        app:layout_constraintBottom_toTopOf="@+id/Logout"
-        tools:layout_editor_absoluteX="0dp" />
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_selectCategory" />
 
     <Button
         android:id="@+id/Logout"
         android:layout_width="129dp"
         android:layout_height="65dp"
         android:layout_marginEnd="64dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="120dp"
         android:onClick="logout"
         android:text="Logout"
         app:layout_constraintBottom_toBottomOf="parent"
